Update title and author meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <meta name="author" content="Exaucé"
- <title>mon web</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Exaucé">
+  <title>Exaucé web</title>
  
  <link rel="stylesheet" href="style.css">
  </head>
